[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[tool.poetry]
name = "GOSTurban"
version = "1.0"
description = "Multiple functions, tools, and tutorials for calculating urbanization based on gridded population data"
authors = ["Benjamin P. Stewart"]

[project]
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
maintainers = [
	{ name = "Benjamin P. Stewart", email = "bstewart@worldbankgroup.org" },
	{ name = "Andres Chamorro", email = "achamorroelizond@worldbank.org" },
]
classifiers = [
	"Programming Language :: Python :: 3 :: Only",
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Operating System :: OS Independent",
]
keywords = ["gis", "spatial", "statistics", "world bank", "development"]

requires-python = ">=3.8"
dependencies = [
	"rasterio",
	"geopandas",
	"pandas",
	"numpy",
	"scipy",
	"shapely",
	"geopy",
	"pyproj",
	"elevation",
	"geojson",
	"GOSTrocks"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "GOSTurban[docs]"]
docs = [
	"docutils==0.17.1",
	"jupyter-book>=1,<2",
	"sphinxcontrib-apidoc>=0.4.0,<1",
	"jupyter-cache>=0.6.0",
	"nbconvert",
	"nbstripout"
]

[project.urls]
"Homepage" = "https://github.com/worldbank/GOSTurban"
"Bug Reports" = "https://github.com/worldbank/GOSTurban/issues"
"Source" = "https://github.com/worldbank/GOSTurban"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/GOSTurban/_version.py"

[tool.codespell]
skip = 'docs/_build,docs/references.bib,__pycache__,*.png,*.gz,*.whl'
ignore-regex = '^\s*"image\/png":\s.*'
ignore-words-list = "gost,"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-mock = "*"
pytest-cov = "*"
shapely = "*"
numpy = "*"
cython = "*"
pandas = "*"
geopandas = "*"
pre-commit = "*"
