[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "GOSTurban"
dynamic = ["version", "dependencies", "optional-dependencies"]
description = "Multiple functions, tools, and tutorials for calculating urbanization based on gridded population data"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [{ name = "Benjamin P. Stewart" }]
maintainers = [
	{ name = "Benjamin P. Stewart", email = "bstewart@worldbankgroup.org" },
	{ name = "Andres Chamorro", email = "achamorroelizond@worldbank.org" },
]
classifiers = [
	"Programming Language :: Python :: 3 :: Only",
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Operating System :: OS Independent",
	"Topic :: Scientific/Engineering",
]
keywords = ["gis", "spatial", "statistics", "world bank", "development"]

requires-python = ">=3.10"

[project.urls]
"Homepage" = "https://github.com/worldbank/GOSTurban"
"Bug Reports" = "https://github.com/worldbank/GOSTurban/issues"
"Source" = "https://github.com/worldbank/GOSTurban"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements-dev.txt"] }

[tool.setuptools_scm]
version_file = "src/GOSTurban/_version.py"

[tool.codespell]
skip = 'docs/_build,docs/references.bib,__pycache__,*.png,*.gz,*.whl'
ignore-regex = '^\s*"image\/png":\s.*'

[tool.ruff.lint.pydocstyle]
convention = "numpy"
